[tool.poetry]
name = "python-command-flattener-be"
version = "0.1.0"
description = ""
authors = ["Ivan Gerov <igerov11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
black = "^23.12.1"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
